src/parser/snapshots/ruasc__parser__tests__all_samples@op_precedence__bit_shifts.as.snap
---
source: src/parser/tests.rs
expression: parsed
input_file: samples/op_precedence/bit_shifts.as
---
Ok:
  statements:
    - Declare:
        name: a
        value:
          Constant:
            Integer: 16
    - Declare:
        name: b
        value:
          Constant:
            Integer: 2
    - Declare:
        name: c
        value:
          Constant:
            Integer: 1
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - BinaryOperator:
                    - Add
                    - BinaryOperator:
                        - Add
                        - BinaryOperator:
                            - Add
                            - BinaryOperator:
                                - Add
                                - Constant:
                                    String: a=
                                - Constant:
                                    Identifier: a
                            - Constant:
                                String: ", b="
                        - Constant:
                            Identifier: b
                    - Constant:
                        String: ", c="
                - Constant:
                    Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "----"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a << b >> c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftRight
                      - BinaryOperator:
                          - BitShiftLeft
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a << b) >> c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftRight
                      - Parenthesis:
                          BinaryOperator:
                            - BitShiftLeft
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a >> b << c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftLeft
                      - BinaryOperator:
                          - BitShiftRight
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a >> b) << c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftLeft
                      - Parenthesis:
                          BinaryOperator:
                            - BitShiftRight
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a >>> b >> c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftRight
                      - BinaryOperator:
                          - BitShiftRightUnsigned
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a >>> b) >> c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftRight
                      - Parenthesis:
                          BinaryOperator:
                            - BitShiftRightUnsigned
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a << b >> c >>> b = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftRightUnsigned
                      - BinaryOperator:
                          - BitShiftRight
                          - BinaryOperator:
                              - BitShiftLeft
                              - Constant:
                                  Identifier: a
                              - Constant:
                                  Identifier: b
                          - Constant:
                              Identifier: c
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(((a << b) >> c) >>> b) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftRightUnsigned
                      - Parenthesis:
                          BinaryOperator:
                            - BitShiftRight
                            - Parenthesis:
                                BinaryOperator:
                                  - BitShiftLeft
                                  - Constant:
                                      Identifier: a
                                  - Constant:
                                      Identifier: b
                            - Constant:
                                Identifier: c
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a << b + c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftLeft
                      - Constant:
                          Identifier: a
                      - BinaryOperator:
                          - Add
                          - Constant:
                              Identifier: b
                          - Constant:
                              Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a << (b + c) = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftLeft
                      - Constant:
                          Identifier: a
                      - Parenthesis:
                          BinaryOperator:
                            - Add
                            - Constant:
                                Identifier: b
                            - Constant:
                                Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a * b << c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftLeft
                      - BinaryOperator:
                          - Multiply
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(a * b) << c = "
                - Parenthesis:
                    BinaryOperator:
                      - BitShiftLeft
                      - Parenthesis:
                          BinaryOperator:
                            - Multiply
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
